--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,28 +1,27 @@
 ---
-- name: Debian | Install packages for nfs
-  apt: >
-   name=nfs-common
-   state=latest
-   update_cache=yes
-  when: item.fstype == "nfs"
-  with_items: mount
 
-- name: Debian | Install packages for cifs
-  apt: >
-   name=cifs-utils
-   state=latest
-   update_cache=yes
-  when: item.fstype == "cifs"
-  with_items: mount
+- name: Debian | Ensure required packages are installed
+  apt:
+   name: '{{ mount_packages["Debian"][item.fstype] }}'
+   state: 'latest'
+  when: (item.fstype is string and item.fstype in ['cifs', 'nfs'])
+  with_flattened:
+    - mount_list
+    - mount_group_list
+    - mount_host_list
 
-- name: Debian | mount devices
-  mount: >
-   dump={{item.dump|default(omit)}}
-   fstab={{item.fstab|default("/etc/fstab")}}
-   fstype={{ item.fstype }}
-   name={{ item.dest }}
-   src={{ item.src }}
-   opts={{item.opts|default(omit)}}
-   passno={{item.passno|default(omit)}}
-   state={{ item.state|default("mounted")}}
-  with_items: mount
+- name: mount devices
+  mount:
+   dump: '{{ item.dump|default(omit) }}'
+   fstab: '{{ item.fstab|default("/etc/fstab") }}'
+   fstype: '{{ item.fstype }}'
+   name: '{{ item.dest }}'
+   src: '{{ item.src }}'
+   opts: '{{ item.opts|default(omit) }}'
+   passno: '{{ item.passno|default(omit) }}'
+   state: '{{ item.state|default("mounted") }}'
+  when: (item.src is string)
+  with_flattened:
+    - mount_list
+    - mount_group_list
+    - mount_host_list
