Fixed in case state is omitted and added examples.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,10 @@
 
 # "Global" mounts
 mount_list:
+  # - src: 'tmpfs'
+  #   dest: '/tmp'
+  #   fstype: 'tmpfs'
+  #   opts: 'nodev,nosuid,size=50%'
 
 # "Host group" mounts
 mount_group_list:
