Set variables to empty lists by default.
* Fixes: Failed to template {{ mount + mount_list + mount_group_list + mount_host_list | default([]) }}: an unexpected type error occurred. Error was can only concatenate list (not "NoneType") to list

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,17 +1,19 @@
 ---
 
+# mount_list:
+#   - src: 'tmpfs'
+#     dest: '/tmp'
+#     fstype: 'tmpfs'
+#     opts: 'nodev,nosuid,size=50%'
+
 # "Global" mounts
-mount_list:
-  # - src: 'tmpfs'
-  #   dest: '/tmp'
-  #   fstype: 'tmpfs'
-  #   opts: 'nodev,nosuid,size=50%'
+mount_list: []
 
 # "Host group" mounts
-mount_group_list:
+mount_group_list: []
 
 # "Host" mounts
-mount_host_list:
+mount_host_list: []
 
 # Other mounts (for example for role dependencies)
 mount: []
